tests/suite/fail/generated/lexer/fail_unclosed_comment_5.ny
//~ ERROR unclosed block comment
fn main() {
    let x = 5 /* unclosed block 5
    print(x)
}
